Corrected column heights due to image resizing
Reducing the size of the featured image caused the featured text to be
off center

Removed media query for largest viewport since the columns are maximized
at the prior viewport level

--- a/css/index.css
+++ b/css/index.css
@@ -23,13 +23,12 @@
 
 /* Set the correct height of the column */
 /* depending on the viewport width      */
-@media (min-width: 768px) { .vcenter { height: 259px; } }
+@media (min-width: 768px) { .vcenter { height: 245px; } }
 
 @media (min-width: 992px) {
-    .vcenter { height: 341px; }
+    .vcenter { height: 320px; }
 
     /* Move the featured content upward */
-    .row + .row .col-sm-6 { margin-top: -50px; }}
-
-@media (min-width: 1200px) { .vcenter { height: 375px; } }
+    .row + .row .col-sm-6 { margin-top: -50px; }
+}
 
